Undo the SGML_CATALOG_FILES variable breakage introduced in 2.4.26.  This caused KDE documentation not to build.  This patch has been rolled into libxml CVS, and should be resolved in the next release.  See http://bugzilla.gnome.org/show_bug.cgi?id=96963 for more details.

Submitted by:	will
Obtained from:	libxml CVS